working on the guide for Onigashima

--- a/html/dungeon/onigashima.html
+++ b/html/dungeon/onigashima.html
@@ -185,29 +185,372 @@
           </ol>
           <h2 id="important_items">Important Items</h2>
           <h3 id="weapon">Weapon</h3>
-          <p></p>
+          <p>
+            Katana+10 (三回ド仏目) or so would be ideal at this point in the game.<br>
+            Multiple 幸 seals is also a nice option for the last 3 slots to boost the amount of exp you gain.<br>
+            If 回 is too difficult to synthesize, you can substitute with multiple 弟.<br>
+          </p>
+          <table>
+            <tr>
+              <th>Seal</th>
+              <th>Item</th>
+              <th>Info</th>
+            </tr>
+            <tr>
+              <td>三</td>
+              <td>Razor Wind</td>
+              <td>Lets you attack in a 3-way pattern.</td>
+            </tr>
+            <tr>
+              <td>回</td>
+              <td>Healing Sword</td>
+              <td>Heal HP equal to 1/3 of the amount of damage you dealt.<br>Synthesize Herb, Otogiriso, and Life Grass onto a weapon to turn it into a Healing Sword.</td>
+            </tr>
+            <tr>
+              <td>ド</td>
+              <td>Drain Buster</td>
+              <td>Deal x1.5 damage to Drain monsters. (ex: Slugs, Puppets, Scorpion)</td>
+            </tr>
+            <tr>
+              <td>仏</td>
+              <td>Ghost Sickle</td>
+              <td>Deal x1.5 damage to Ghost monsters. (ex: Yamikichi, Gale, Pumphantasm)</td>
+            </tr>
+            <tr>
+              <td>目</td>
+              <td>Cyclops Killer</td>
+              <td>Deal x1.5 damage to One-eyed monsters. (ex: Ironhead, Golem, Gazer)</td>
+            </tr>
+            <tr>
+              <td>弟</td>
+              <td>Otogiriso</td>
+              <td>Restore a fixed amount of HP when you deal damage. (4, 7, 10, 13, 15)</td>
+            </tr>
+            <tr>
+              <td>幸</td>
+              <td>Happy Grass</td>
+              <td>Gain more exp when you defeat monsters. (+10%, +40%, +70%, +100%, +130%)<br>You'll want at least 2~3 seals to make it noteworthy.</td>
+            </tr>
+          </table>
           <h3 id="shield">Shield</h3>
-          <p></p>
+          <p>
+            Beetle Shield+10 (皮弟弟弟バ) or so should be plenty.<br>
+            Use a Leather Shield if you don't want to lose upgrade value due to rust.<br>
+            You'll want a minimum of 3 弟 seals to help restore HP after taking damage.
+          </p>
+          <table>
+            <tr>
+              <th>Seal</th>
+              <th>Item</th>
+              <th>Info</th>
+            </tr>
+            <tr>
+              <td>皮</td>
+              <td>Leather Shield</td>
+              <td>Halves hunger rate.</td>
+            </tr>
+            <tr>
+              <td>弟</td>
+              <td>Otogiriso</td>
+              <td>Restore a fixed amount of HP when you receive damage. (4, 7, 10, 13, 15)</td>
+            </tr>
+            <tr>
+              <td>バ</td>
+              <td>Counter Shield</td>
+              <td>Reflect 30% of the damage you received back at the enemy.</td>
+            </tr>
+          </table>
           <h3 id="other">Other</h3>
-          <p></p>
+          <ul>
+            <li>Scout Bracelet</li>
+            <ul>
+              <li>Helps prevent surprise attacks by monsters like Nigiri Morph and Kengo.</li>
+              <li>Allows you to see where Shops and Monster Houses are on the map.</li>
+            </ul>
+            <li>Otogiriso</li>
+            <ul>
+              <li>Restores 100 HP.</li>
+            </ul>
+            <li>Revival Grass</li>
+            <ul>
+              <li>Revives you with full HP, strength, and fullness if you collapse.</li>
+            </ul>
+            <li>Decoy Scroll</li>
+            <ul>
+              <li>Good to have on hand for emergencies.</li>
+            </ul>
+            <li>Storage Pot</li>
+            <ul>
+              <li>The carry-in limit is 7 items, but it doesn't count items inside Storage Pots.</li>
+            </ul>
+            <li>Balance Staff</li>
+            <ul>
+              <li>Protect against item loss from Armordillo tackles or Boss Oni's tripping attack.</li>
+            </ul>
+            <li>Iron Arrows</li>
+            <ul>
+              <li>Lets you to defeat troublesome monsters before they get close.</li>
+            </ul>
+          </ul>
           <h2 id="floor_guide">Floor Guide</h2>
           <h3 id="waterfall_basin">01~06F</h3>
-          <p></p>
+          <p>
+            Standard early game monsters you've seen throughout the three trails, along with <a href="/shiren2/html/system/monster.html#mamel_family">Small Oni</a> on 4~6F.
+          </p>
+          <p>
+            Small Oni has somewhat high attack for an early game monster,<br>
+            but they shouldn't be much of a threat if you have the recommended equipment.
+          </p>
+          <p>
+            There are many waterways in Onigashima, so don't let your guard down and<br>
+            get tripped in the direction of water by an Armordillo if you didn't bring a Balance Staff.
+          </p>
           <h3 id="mountain_cave">07~12F</h3>
-          <p></p>
+          <p>
+            This is where troublesome monsters like <a href="/shiren2/html/system/monster.html#mamel_family">Gazer</a>, <a href="/shiren2/html/system/monster.html#mamel_family">Shotfish</a>, <a href="/shiren2/html/system/monster.html#mamel_family">Nigiri Morph</a>, and <a href="/shiren2/html/system/monster.html#mamel_family">Kengo</a> make an appearance.<br>
+          </p>
+          <p>Shoot arrows at Gazer (7~8F) to defeat it before they get close and have a chance to hypnotize you.</p>
+          <p>Shotfish (7~9F) can turn all scrolls in your inventory into Wet Scrolls, excluding those inside pots.</p>
+          <p>Nigiri Morph (9~10F) can transform your valuable items into Large Riceballs.<br>Use arrows from a distance, or items if they got close to avoid letting them act if at all possible.</p>
+          <p>Fight Kengo (11~12F) with your back against a wall, or unequip your shield beforehand to avoid losing it.</p>
+          Note that <a href="/shiren2/html/system/monster.html#mamel_family">Mixer</a> can spawn on 9~12F, along with Mixermon on 12F.<br>
+          Mixermon is the level 2 monster of the Mixer family, and can swallow up to 3 items.<br>
+          Go ahead and combine same name staves to free up inventory space, or<br>
+          synthesize equipment if you have some on hand that you want to combine.
           <h3 id="hoof_rock_wall">13F~15F</h3>
-          <p></p>
+          <p>
+            Ranged attackers such as <a href="/shiren2/html/system/monster.html#mamel_family">Wolf Droid</a>, <a href="/shiren2/html/system/monster.html#mamel_family">Pop Tank</a>, <a href="/shiren2/html/system/monster.html#mamel_family">Water Strider</a>, and <a href="/shiren2/html/system/monster.html#mamel_family">Bored Kappa</a> make an appearance.
+          </p>
+          <p>
+            Watch out for Water Strider and Bored Kappa in particular,<br>
+            since they can potentially throw dangerous items like Gitan, Dragon Grass, and Poison Grass.<br>
+            Don't let your guard down when you're inside rooms, and keep your HP topped up in case of a surprise attack.
+          </p>
+          <p>
+            <a href="/shiren2/html/system/monster.html#mamel_family">Rocky Oni</a> (14~15F) also makes an appearance, and move and attack at double speed.<br>
+            Make a habit of unequipping your bracelets when fighting up close to prevent them from cracking,<br>especially when dealing with monsters that have faster movement.
+          </p>
+          <p>
+            16F is a boss fight against Galaha and his squad of Oni, so restore your HP<br>
+            and equip a Pierce Bracelet if you happen to have one before proceeding past 15F.
+          </p>
           <h3 id="dark_night_cavern">16F Galaha</h3>
-          <p></p>
+          <p>
+            Boss fight against <a href="/shiren2/html/system/monster.html#mamel_family">Galaha</a>, 5 <a href="/shiren2/html/system/monster.html#mamel_family">Small Oni</a>, 4 <a href="/shiren2/html/system/monster.html#mamel_family">Rocky Oni</a>, 5 <a href="/shiren2/html/system/monster.html#mamel_family">Lanky Oni</a>, and 4 <a href="/shiren2/html/system/monster.html#mamel_family">Stumpy Oni</a>.<br>
+            Note that you only need to defeat Galaha to end the battle.
+          </p>
+          <p>
+            Galaha has about the same attack and defense stats of an Armor Spider (13F),<br>
+            so he isn't too difficult to take out. Getting close to him is the trickiest part of the fight.
+          </p>
+          <p>There are many ways to tackle this fight, but here are some strategies:</p>
+          <ul>
+            <li><p>Snipe Galaha with arrows while having a Pierce Bracelet equipped.</p></li>
+            <li><p>Read a Decoy Scroll to lure the squad into attacking shadows,<br>and then eat Warp Grass to get close to Galaha and use regular attacks.</p></li>
+            <li><p>Read a Blaze Scroll to wipe out the squad.</p></li>
+            <li><p>Scatter Perfect Iron Sand to blind everyone in the room, and then run up to Galaha.</p></li>
+            <li>Throw 710 or more Gitan at Galaha to one-shot him.</li>
+          </ul>
+          <p>
+            If you decide to fight them head on, you're going to take many hits,<br>
+            so you'll want to equip a shield with multiple 弟 to counter the HP loss.<br>
+            Also be sure to unequip any bracelets, because they will otherwise quickly shatter.
+          </p>
+          <p>
+            Side note: lightning damage will actually heal Oni, so reading a Lightning Scroll is not effective.
+          </p>
+          <p>If you return to Onigashima after finishing the main story, simply send out ally monsters to handle things.<br>
+          They will automatically go back inside their pots after the fight. (Same with the Boss Oni battle)
+          </p>
+          <p>
+            <span class="dungeon_desc_warning">※ ※ Warning ※ ※</span><br>
+            There's a bug where the game will freeze if Shiren either goes inside of a pot, or<br>
+            becomes invisible during the fight. (example: ally Devil Kangaroo swinging an Invisible Staff at Shiren). 
+          </p>
           <h4 id="queen_spider_stats">Galaha Squad Stats</h4>
+          <table>
+            <tr>
+              <th>Name</th>
+              <th>HP</th>
+              <th>ATK</th>
+              <th>DEF</th>
+              <th>EXP</th>
+              <th>Element</th>
+              <th>Notes</th>
+            </tr>
+            <tr>
+              <td>Galaha</td>
+              <td>71</td>
+              <td>21</td>
+              <td>23</td>
+              <td>120</td>
+              <td>Weapon</td>
+              <td><p>Issues commands to squad members.<br>Tries to avoid lining up with Shiren<br>when issuing commands.</p></td>
+            </tr>
+            <tr>
+              <td>Small Oni</td>
+              <td>12</td>
+              <td>10</td>
+              <td>6</td>
+              <td>8</td>
+              <td>-</td>
+              <td><p>Regular attacks only.</p></td>
+            </tr>
+            <tr>
+              <td>Rocky Oni</td>
+              <td>60</td>
+              <td>15</td>
+              <td>20</td>
+              <td>70</td>
+              <td>Fast (2x)</td>
+              <td><p>Moves and attacks at double speed.</p></td>
+            </tr>
+            <tr>
+              <td>Stumpy Oni</td>
+              <td>60</td>
+              <td>15</td>
+              <td>20</td>
+              <td>50</td>
+              <td>-</td>
+              <td><p>Doesn't move.<br>Throws stones at targets within 3 tiles.</p></td>
+            </tr>
+            <tr>
+              <td>Lanky Oni</td>
+              <td>50</td>
+              <td>9</td>
+              <td>18</td>
+              <td>60</td>
+              <td>-</td>
+              <td><p>Shoots Iron Arrows.</p></td>
+            </tr>
+          </table>
           <h3 id="cliff_wind_hole">17~21F</h3>
-          <p></p>
+          <p>
+            Watch out for <a href="/shiren2/html/system/monster.html#mamel_family">Porky</a>, <a href="/shiren2/html/system/monster.html#mamel_family">Nigiri Boss</a>, and <a href="/shiren2/html/system/monster.html#mamel_family">Tiger Hurler</a> in particular.
+          </p>
+          <p>Special attacks of some of the more dangerous monsters:</p>
+          <table>
+            <tr>
+              <td>Porky</td>
+              <td><p>Tosses stones at targets within 2 tiles, even if they're outside of view.</p></td>
+            </tr>
+            <tr>
+              <td>Nigiri Boss</td>
+              <td>Transforms Shiren into a riceball, reducing his defense to 0.</td>
+            </tr>
+            <tr>
+              <td>Tiger Hurler</td>
+              <td>Throws Shiren at monsters or onto traps, or even into Monster Houses.</td>
+            </tr>
+            <tr>
+              <td>Stormy Doll</td>
+              <td>Lowers weapon or shield upgrade value by 1.</td>
+            </tr>
+          </table>
+          <p>
+            Shops between 17~20F or Traders between 17~24F have a chance to offer Dragon Tile Bracelets for sale.<br>
+            Be sure to buy any that you see, since they can be used to synthesize powerful Daisangen equipment.<br>
+          </p>
+          <p>
+            Come back when you have a Trapper Bracelet and use Pitfalls to hunt for shops and traders more efficiently.<br>
+            You can also read Restock Scrolls to refresh merchandise if you happen to find a bracelet specialty shop.
+          </p>
           <h3 id="ancient_ruins">22~24F</h3>
-          <p></p>
+          <p>
+            Powerful monsters including <a href="/shiren2/html/system/monster.html#mamel_family">Dragon</a>, <a href="/shiren2/html/system/monster.html#mamel_family">Demon Scorpion</a>, and <a href="/shiren2/html/system/monster.html#mamel_family">Monarch Tusker</a> make an appearance.<br>
+            Keep in mind, hurrying to the stairs instead of trying to visit every room is a legitimate strategy in roguelikes.
+          </p>
+          <p>
+            Monarch Tusker in particular can swing a Slow Staff to either slow you down or paralyze<br>
+            you from a distance, sometimes resulting in you collapsing before being able to act.<br>
+            Recommended to rush to the stairs if you don't have Revival Grass on hand.
+          </p>
+          <p>Special attacks of these monsters:</p>
+          <table>
+            <tr>
+              <td>Dragon</td>
+              <td><p>Breathes fire that deals 20 damage if Shiren is lined up on a straight line.</p></td>
+            </tr>
+            <tr>
+              <td>Demon Scorpion</td>
+              <td>Lunges its stinger forward, slowing Shiren down by 1 stage.</td>
+            </tr>
+            <tr>
+              <td>Monarch Tusker</td>
+              <td>Swings a Slow Staff at Shiren, slowing him down by 1 stage.<br>Paralyzes Shiren for 3 turns if he was already slowed, making him unable to act.</td>
+            </tr>
+          </table>
+          <p>
+            <a href="/shiren2/html/system/monster.html#mamel_family">Copycat Mask</a> can also spawn between 22~23F.<br>
+            It's pretty weak, but disguises itself as other monsters, sometimes resulting in wasted item usage like<br>
+            eating Dragon Grass or throwing Gitan at what you thought was a Dragon, but turned out to be one of these.<br>
+            You can identify them by swinging a Knowledge Staff or Seal Staff.
+          </p>
           <h3 id="headwater_cave">25F Boss Oni</h3>
-          <p></p>
+          <p>
+            The final boss of story mode is a 1-on-1 fight against <a href="/shiren2/html/system/monster.html#mamel_family">Boss Oni</a>.<br>
+            He has high offensive and defensive stats, and can use a multitude of special attacks, including<br>
+            recovering from status conditions, breathing fire, and making Shiren trip from anywhere in the room.
+          </p>
+          <p>
+            You might see your items go up in flames if you don't have a Balance Staff in your inventory.<br>
+            Sanctuary Scrolls also burn up, so placing one on the ground to create a safe zone can be unreliable.
+          </p>
+          <p>
+            If Boss Oni has a status condition, he will instantly cure it the next time he is attacked by Shiren.<br>
+            However, he can't restore lost strength due to getting hit by Poison Grass.
+          </p>
+          <p>
+            You can one-shot Boss Oni by throwing a Storage Pot at him with a total of 4500 or more Gitan inside.<br>
+            It's best to equip a Bullseye Bracelet if you use this strategy so that you don't miss.<br>
+            Bullseye Bracelet is easier to find in Shuten Trail Hard rather than Onigashima.
+          </p>
+          <p>
+            Otherwise, use items like Swift Grass and Decoy Scroll to get some hits in without taking damage.
+          </p>
+          <p>
+            Boss Oni will give you a Crescent Arm every time you return here and defeat him after finishing the story.<br>
+            The weapon has high attack and slot counts, and offers one of the seals required creating a Kaburasutegi.
+          </p>
+          <p>
+            Some post-game strategies include using a Landmine and Trapper Bracelet to<br>
+            one-shot Boss Oni, or sending out ally monsters take care of the fight.<br>
+            You could even throw an Extinction Scroll at him for fun.
+          </p>
           <h4 id="queen_spider_stats">Boss Oni Stats</h4>
+          <table>
+            <tr>
+              <th>Name</th>
+              <th>HP</th>
+              <th>ATK</th>
+              <th>DEF</th>
+              <th>EXP</th>
+              <th>Sp.Atk Use</th>
+              <th>Notes</th>
+            </tr>
+            <tr>
+              <td>Boss Oni</td>
+              <td>450</td>
+              <td>45</td>
+              <td>40</td>
+              <td>0</td>
+              <td>30%</td>
+              <td>
+                <p>
+                  Immune to fire damage, Spoil Traps, and Pitfalls.<br>
+                  Breathes fire when Shiren is lined up, similar to Dragons.<br>
+                  Make Shiren trip from anywhere in the room.<br>
+                  Knocks Shiren away, dealing 10 damage.<br>
+                  Recovers from status conditions when he takes damage.
+                </p>
+              </td>
+            </tr>
+          </table>
           <h2 id="monsters">Monsters</h2>
+          <p class="dungeon_table_notes">
+            The age of N'dubbas disguised as Shop merchandise vary depending on the floor.<br>
+            Regular N'dubba for 4~15F, and N'dubba 20yr for 17~20F.
+          </p>
           <div class="onigashima_monster_table">
             <table>
               <tr>
