working on Onigashima guide

--- a/html/dungeon/onigashima.html
+++ b/html/dungeon/onigashima.html
@@ -2167,8 +2167,66 @@
             </table>
           </div>
           <h2 id="floor_guide">Golden Interval</h2>
-          <p>Text</p>
+          <p>
+            There's a 20% chance for Golden Stairs to be hidden inside of a wall between 8~15F.<br>
+            You'll be returned to 11F after claiming the treasure and exiting from the Golden Interval area,<br>
+            so if you're lucky, you may be able to find another Golden Stairs between 11~15F.
+          </p>
+          <p>
+            One search method besides reading a Wall Collapse Scroll would be to level up a Boy Cart,<br>
+            swing a Posession Staff to take control of them, and then use their special attack to blow up walls.
+          </p>
+          <p>
+            Ivory Sword and Ivory Shield are ingredients used in making Daisangen equipment, and<br>
+            Dragon Killer is used in making a Ryujin Sword, so be sure to pick them up if you happen to find them.<br>
+            Golden Sword and Golden Shield look nice, but they're too weak to be used as a main weapon or shield.<br>
+            However, they provide a blue 金 seal that protects your equipment from rusting when used in synthesis.
+          </p>
+          <p>
+            Phantasm Bracelet is one of the best bracelets in the game, so take good care of it if you find one.<br>
+            It allows you to walk in the air and go through walls, along with warping to a random room<br>
+            on the current floor if you unequip it while inside a wall or over water.<br>
+            Very useful for dealing with Monster Houses or stealing from shops.
+          </p>
           <h3>Items</h3>
+          <table class="golden_interval_items">
+            <tr>
+              <th>Category</th>
+              <th>Item Name</th>
+            </tr>
+            <tr>
+              <td>Weapon</td>
+              <td>Ivory Sword, Dragon Killer, Golden Sword</td>
+            </tr>
+            <tr>
+              <td>Shield</td>
+              <td>Ivory Shield, Dragon Shield, Golden Shield</td>
+            </tr>
+            <tr>
+              <td>Bracelet</td>
+              <td>Phantasm Bracelet</td>
+            </tr>
+            <tr>
+              <td>Scroll</td>
+              <td>Heaven Scroll, Earth Scroll, Sanctuary Scroll, Plating Scroll</td>
+            </tr>
+            <tr>
+              <td>Pot</td>
+              <td>Storage Pot, Surprise Pot</td>
+            </tr>
+            <tr>
+              <td>Staff</td>
+              <td>Swap Staff, Balance Staff, Slow Staff, Knockback Staff,<br>Miss Staff, Posession Staff, Grass Receive Staff, Grass Toss Staff</td>
+            </tr>
+            <tr>
+              <td>Gitan</td>
+              <td>10~2000 Gitan</td>
+            </tr>
+            <tr>
+              <td>Treasure</td>
+              <td>Golden Sword, Golden Shield, Wooden Shield, Evasive Shield, Happy Shield,<br>Echo Shield, Critical Arrow, Razor Arrow, Revival Grass, Angel Seed, Sanctuary Scroll</td>
+            </tr>
+          </table>
           <h2 id="floor_guide">No Carry-in Guide</h2>
           <p>Text</p>
           <h3>Important Items</h3>
