working on the Onigashima guide still

--- a/html/dungeon/onigashima.html
+++ b/html/dungeon/onigashima.html
@@ -2185,8 +2185,7 @@
           <p>
             Phantasm Bracelet is one of the best bracelets in the game, so take good care of it if you find one.<br>
             It allows you to walk in the air and go through walls, along with warping to a random room<br>
-            on the current floor if you unequip it while inside a wall or over water.<br>
-            Very useful for dealing with Monster Houses or stealing from shops.
+            on the current floor if you unequip it while inside a wall or over water.
           </p>
           <h3>Items</h3>
           <table class="golden_interval_items">
@@ -2228,9 +2227,52 @@
             </tr>
           </table>
           <h2 id="floor_guide">No Carry-in Guide</h2>
-          <p>Text</p>
+          <p>The trickiest part of this ruleset is the two boss fights.<br>Look for items like Swift Grass, Warp Grass, Blaze Scroll, and Blank Scroll to help get past the Galaha fight.<br>
+          You'll also want to store 4500 Gitan inside of a Storage Pot to throw at Boss Oni at the very end.</p>
           <h3>Important Items</h3>
-          <p></p>
+          <ul>
+            <li><p>Katana, Beetle Shield</p></li>
+            <ul>
+              <li>Best equipment you'll find on the ground in Onigashima.</li>
+              <li>However, they're still too weak to rely on toward the end without synthesis seals or upgrade values.</li>
+            </ul>
+            <li><p>Disposable Sword, Disposable Shield</p></li>
+            <ul>
+              <li>They can't be used as a main weapon or shield, but they're nice options to have on hand.</li>
+              <li>Can be thrown to deal a decent amount of damage.</li>
+            </ul>
+            <li><p>Otogiriso</p></li>
+            <ul>
+              <li>Ideally used as synthesis material, but can be eaten in a pinch to restore 100 HP.</li>
+            </ul>
+            <li><p>Happy Grass</p></li>
+            <ul>
+              <li>Throw at a monster to level it up, and then defeat it for a large amount of exp.</li>
+            </ul>
+            <li><p>Slumber Scroll</p></li>
+            <ul>
+              <li>Useful to have on hand to escape sticky situations.</li>
+              <li>Your attacks will never miss when hitting sleeping enemies.</li>
+            </ul>
+            <li><p>Blank Scroll</p></li>
+            <ul>
+              <li>Shop exclusive item that can be transformed into any scroll you've read before.</li>
+              <li>Handy if you've read an Extinction Scroll in the past, since it allows you to one-shot Boss Oni.</li>
+            </ul>
+            <li><p>Posession Staff</p></li>
+            <ul>
+              <li>Offers many functions, including leveling up enemies,<br>tripping monsters for items by taking control of Armordillos, and escaping bad situations.</li>
+            </ul>
+            <li><p>Storage Pot</p></li>
+            <ul>
+              <li>Throw it at Boss Oni with 4500 or more Gitan inside to defeat him in a single hit.</li>
+            </ul>
+            <li><p>Memento Pot, Surprise Pot</p></li>
+            <ul>
+              <li>Using equipment found in a Memento Pot is against the rules, so just throw it away.</li>
+              <li>Surprise Pot may contain useful items, and pent-up anger can one-shot Boss Oni as well,<br>but you risk being surrounded by monsters if there happened to be some inside the pot.</li>
+            </ul>
+          </ul>
           <h3>01~03F</h3>
           <p></p>
           <h3>04~06F</h3>
