finished Onigashima guide

--- a/html/dungeon/onigashima.html
+++ b/html/dungeon/onigashima.html
@@ -2233,7 +2233,7 @@
           <ul>
             <li><p>Katana, Beetle Shield</p></li>
             <ul>
-              <li>Best equipment you'll find on the ground in Onigashima.</li>
+              <li>Best equipment you can find on the ground in Onigashima.</li>
               <li>However, they're still too weak to rely on toward the end without synthesis seals or upgrade values.</li>
             </ul>
             <li><p>Disposable Sword, Disposable Shield</p></li>
@@ -2274,19 +2274,51 @@
             </ul>
           </ul>
           <h3>01~03F</h3>
-          <p></p>
+          <p>
+            Snacky doesn't appear in Onigashima, so it's difficult to make a Cave Mamel to for early level ups.<br>That said, you can still make one by using Happy Grass or Posession Staff.<br>You'll have a hard time after these floors if you don't level up or find decent equipment.
+          </p>
+          <p>
+            Identify staves by swinging them, and pots by inserting items.<br>If you find a Storage Pot, start placing Gitan into it for the final boss battle.<br>Only use scrolls if you happen to obtain two of the same one. Identify Scrolls are common enough.<br>There are only 6 types of bracelets that can be found on the ground here, so you can narrow it down easily.<br>All grass items will already be identified. Save Otogiriso for synthesis if possible.
+          </p>
           <h3>04~06F</h3>
-          <p></p>
+          <p>
+            Dangerous monsters include <a href="/shiren2/html/system/monster.html#mamel_family">Small Oni</a> and <a href="/shiren2/html/system/monster.html#mamel_family">Armordillo Bro</a>, along with <a href="/shiren2/html/system/monster.html#mamel_family">Spearfish</a> family monsters from 5F.
+          </p>
+          <p>There are many waterways in Onigashima, so you risk losing items if you fight Armordillos near water.<br>Spearfish monsters can prolong the fight by restoring HP inside water when their HP gets low.</p>
+          <p>If you were lucky enough to find a Posession Staff, you can take<br>control of an Armordillo and gather items by making other monsters trip.</p>
+          <p>If you weren't able to make a Cave Mamel earlier, you could try to gain more levels<br>by using the knockback damage from Armordillo Bro's tackle to level it up into an Armordillo Pop.</p>
           <h3>07~12F</h3>
-          <p></p>
+          <p>
+            Notable monsters include <a href="/shiren2/html/system/monster.html#mamel_family">Mr. Drone</a> (7~9F), <a href="/shiren2/html/system/monster.html#mamel_family">Nigiri Morph</a> (9~10F), <a href="/shiren2/html/system/monster.html#mamel_family">Gamagucci</a> (9~11F), and <a href="/shiren2/html/system/monster.html#mamel_family">Mixer</a> (9~12F).
+          </p>
+          <p>Other monsters like Gazer and Scorpion can be troublesome, but Wooden Arrows<br>are commonly found in Onigashima, so they should be easy to defeat from a distance.</p>
+          <p>Prioritize synthesizing as many Otogiriso onto your shield as you can.<br>Let Gamagucci steal a large amount of Gitan from you instead of<br>defeating it right away, and place the dropped Gitan inside a Storage Pot.</p>
+          <p>Things will only get harder from here, so you might want to proceed<br>with the expectation that you won't be able to replenish items until the end.</p>
           <h3>13~15F</h3>
-          <p></p>
+          <p><a href="/shiren2/html/system/monster.html#mamel_family">Pop Tank</a> makes an appearance from 13F.<br>You can gain a large amount of experience if you level it up,<br>but be careful not to accidentally collapse while attempting it.<br>Splash water on it using a Water Pot to prevent it from firing cannonballs.</p>
+          <p><a href="/shiren2/html/system/monster.html#mamel_family">Rocky Oni</a> and <a href="/shiren2/html/system/monster.html#mamel_family">Water Striders</a> both move at double speed.<br>If you're doing ok with your remaining items, you might want to hurry to the exit.</p>
           <h3>16F Galaha</h3>
-          <p></p>
+          <p>You'll want to focus on defeating Galaha quickly, rather than trying to take on the squad from the front.</p>
+          <ul>
+            <li><p>Warp Grass</p></li>
+            <ul>
+              <li>You'll usually end up near Galaha.</li>
+              <li>However, you might get hit by stones or other attacks right away depending on where you land.</li>
+            </ul>
+            <li><p>Pierce Bracelet</p></li>
+            <ul>
+              <li>Throw 710 or more Gitan from the starting position to one-shot Galaha.</li>
+            </ul>
+            <li><p>Slumber Scroll + Swap Staff</p></li>
+            <ul>
+              <li>Read a Slumber Scroll and use Swap Staff twice to reach Galaha, and then use regular attacks.</li>
+            </ul>
+          </ul>
           <h3>17~24F</h3>
-          <p></p>
+          <p>Run for the stairs.</p>
+          <p>Monsters will have increasingly troublesome abilities, along with higher attack that can damage you<br>through the 弟 seals on your shield, so just head for the stairs asap and avoid fighting up close if possible.</p>
           <h3>25F Boss Oni</h3>
-          <p></p>
+          <p>Ideally you'll one-shot him by throwing a Storage Pot with 4500 or more Gitan inside.<br>However, if the pot misses, or you weren't able to find a Storage Pot, you'll have to rely on other items to take him down.<br>Use items such as Swift Grass and Decoy Scroll if you have to use regular attacks.<br>You could also place a Sanctuary Scroll down after luring him into a corner,<br>but note that he might burn it up with his fire attacks.</p>
         </div>
       </div>
       <div id="footer" class="box footer"></div>
